<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="bottom"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:id="@+id/displayQuestion"/>


    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:id="@+id/radioGroup"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="30dp">
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:id="@+id/questionBtn"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="14sp" android:text="@string/question_1"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:id="@+id/questionBtn2"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="14sp" android:text="@string/question_2"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:id="@+id/questionBtn3"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="14sp" android:text="@string/question_3"/>
    </RadioGroup>

        <Button
                android:text="@string/start"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/startBtn"
                android:layout_gravity="bottom"
                android:onClick="startAction"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"/>
        <Button
                android:text="@string/next"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:id="@+id/nextBtn"
                android:onClick="nextAction"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>
</ScrollView>